<resources>
    <string name="app_name">Book Store App</string>
    <string name="action_settings">Settings</string>

    <!-- Title for the CatalogActivity -->
    <string name="catalog_activity_label">Inventory</string>

    <!-- Title for the text when there is nothing in the DB to show -->
    <string name="empty_view_title_text">Nothing in the list yet.</string>

    <!-- Title for the text when there is nothing in the DB to show -->
    <string name="empty_view_subtitle_text">Add a new book by hitting the plus icon.\n\nPlease do not
        forget to insert:\n-the book title\n-the price\n-the quantity</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for the list_view when an AUTHOR has not been added-->
    <string name="author_unknown">Unknown author</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to view book details [CHAR LIMIT=20] -->
    <string name="view_item_activity_title_book_details">Details</string>

    <!-- Overview category name for the activity_editor [CHAR LIMIT=30]-->
    <string name="category_overview">Overview</string>

    <!-- Supplier category name for the activity_editor [CHAR LIMIT=30]-->
    <string name="category_supplier">Supplier</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book and all its info?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in BookCursorAdapter when a book is successfully sold [CHAR LIMIT=NONE] -->
    <string name="cursor_book_sale_successful">Book sold!</string>

    <!-- Toast message in ViewItemActivity when a new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="cursor_book_sale_failed">Book sale failed</string>

    <!-- Toast message in ViewItemActivity/EditorActivity when a new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">New book inserted successfully</string>

    <!-- Toast message in ViewItemActivity/EditorActivity when a new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error while saving book</string>

    <!-- Toast message in ViewItemActivity when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated successfully</string>

    <!-- Toast message in ViewItemActivity when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error while updating the book</string>

    <!-- Toast message in ViewItemActivity when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in ViewItemActivity when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Toast message in BookProvider when the user didn't provide a title for the book [CHAR LIMIT=NONE] -->
    <string name="provider_no_title">Please insert a title</string>

    <!-- Toast message in BookProvider when the user didn't provide a valid price [CHAR LIMIT=NONE] -->
    <string name="provider_price_invalid">Please insert a valid price</string>

    <!-- Toast message in BookProvider when the user didn't provide a valid quantity [CHAR LIMIT=NONE] -->
    <string name="provider_quantity_invalid">Please insert a valid quantity</string>

    <!-- Toast message in BookProvider when the a negative value for quantity was inserted [CHAR LIMIT=NONE] -->
    <string name="provider_quantity_negative">Quantity cannot be negative</string>

    <!-- Toast message in BookProvider when the user tried to enter a negative quantity value [CHAR LIMIT=NONE] -->
    <string name="provider_no_supplier_name">Please insert a valid supplier name</string>

    <!-- Toast message in BookProvider when the user didn't provide valid supplier number [CHAR LIMIT=NONE] -->
    <string name="provider_no_supplier_number">Please insert a valid supplier phone number</string>

    <!-- Dialog message to ask the user to confirm deleting ALL BOOKS [CHAR LIMIT=NONE] -->
    <string name="delete_all_books_dialog_msg">Delete ALL books?</string>

    <!-- Dialog button text for the option to confirm deleting ALL BOOKS [CHAR LIMIT=20] -->
    <string name="delete_all">Delete all</string>

    <!-- Label for the activity_editor when ADDING a new book [CHAR LIMIT=30]-->
    <string name="editor_activity_title_add_book">Add a book</string>

    <!-- Label for the activity_editor when EDITING an existing book entry [CHAR LIMIT=30]-->
    <string name="editor_activity_title_edit_book">Edit book</string>

    <!-- Hint fot the TITLE of the book in the EditText field in the activity_editor [CHAR LIMIT=30]-->
    <string name="hint_book_title">Title</string>

    <!-- Hint fot the AUTHOR of the book in the EditText field in the activity_editor [CHAR LIMIT=30]-->
    <string name="hint_book_author">Author</string>

    <!-- Hint fot the PRICE of the book in the EditText field in the activity_editor [CHAR LIMIT=30]-->
    <string name="hint_book_price">Price</string>

    <!-- Hint fot the QUANTITY of the book in the EditText field in the activity_editor [CHAR LIMIT=30]-->
    <string name="hint_book_quantity">Quantity</string>

    <!-- Hint fot the PRICE of the book in the EditText field in the activity_editor [CHAR LIMIT=30]-->
    <string name="hint_supplier_name">Name</string>

    <!-- Hint fot the PRICE of the book in the EditText field in the activity_editor [CHAR LIMIT=30]-->
    <string name="hint_supplier_phone_number">Phone number</string>

    <!-- Price tag for the activity_view_item.xml shown before the actual price [CHAR LIMIT=20]-->
    <string name="view_item_price">Price:</string>

    <!-- Quantity tag for the activity_view_item.xml shown before the actual price [CHAR LIMIT=20]-->
    <string name="view_item_quantity">Quantity:</string>

    <!-- Currency unit for the price of the book -->
    <string name="unit_book_price">€</string>

</resources>
